    entry per call to EVAL.  (reported by Kevin Reid)
  * improvements to the x86-64 disassembler. (thanks to Lutz Euler)
  * optimization: type testing for non-vector arrays should be faster.
  * fixed TRACE :ENCAPSULATE NIL, added support for :ENCAPSULATE NIL
    on x86-64
  * bug fix: setting 31st element of a bit vector to zero did not work
    on Alpha-32.
  * fixed some bugs related to Unicode integration:
    ** the restarts for recovering from input and output encoding
       errors only appear when there is in fact such an error to
       handle.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** MISC.549 and similar: late transformation of unsafe type
       assertions into derived types caused unexpected code
       transformations.
    ** SCALE-FLOAT type deriver is less wrong.
    ** type derivers for EXP, LOG and similar functions compute result
       types for complex arguments better.
    ** (MISC.563) CONJUGATE type deriver works for very restricted
       complex types.
    ** out-of-line type testers for character strings are available.
    ** EQUAL compiler transform understands specialness of objects
       of type BIT-VECTOR.
    ** accessing double-floats stored on the stack now works on x86-64.
    ** debugger internals could sometimes create invalid lispobjs, 
       resulting in GC crashes.
    ** MISC.548: type check weakening can convert required type into
       optional.
    ** initialization forms for bindings are not in scope of free special
       declarations.

changes in sbcl-0.8.21 (0.9alpha.1?) relative to sbcl-0.8.20:
  * incompatible change: thread support for non-NPTL systems has
    been removed - locking is buggy and unreliable.  A threaded 
    SBCL build will now warn at startup and refuse to create
    new threads, unless futex support is detected in the kernel
  * incompatible change: the top level REPL now has only an ABORT
    restart associated with it, not TOPLEVEL and ABORT as it used to.